# quicksql

./: README.md  base.sql  pyproject.toml  watcher_proof.py
src/quicksql/: __init__.py  parsers.py  qsql.py
src/quicksql/core/: __init__.py  errors.py  executor.py  file.py  manager.py  models.py  watcher.py  watcher_example.py
src/quicksql/parsers/: __init__.py  base.py  dict_like.py  key_value.py
tests/: conftest.py  qsql_basic.sql  qsql_example.sql  test_fixture_setup.py  test_fixtures.py  test_qsql.py  test_qsql_config_parsers.py  test_qsql_manager.py  test_qsql_manager_injection.py
tests/core/: test_executor.py  test_models.py  test_qsql_file.py
