[project]
name = "quicksql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yevgeny Bulochnik", email = "yevgeny.bulochnik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sqlglot[rs]>=27.8.0",
]

[project.scripts]
quicksql = "quicksql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb>=1.3.2",
    "polars[pyarrow]>=1.32.3",
    "pytest>=8.4.1",
    "pytest-watcher>=0.4.3",
    "sqlfluff>=3.4.2",
]
